# MibiCraft

./: .gitattributes  .gitignore  README  building_on_win32.ms  building_on_win32.odt  building_on_win32.txt  meson.build
data/: blocks.ls  meson.build  textures.ls
img/: meson.build
src/: chunk.c  chunk.h  entity.c  entity.h  gfx.c  gfx.h  main.c  meson.build  raycast.c  raycast.h  world.c  world.h
src/client/: button.c  button.h  client_chunk.c  client_world.c  client_world.h  game.c  game.h  gfx.c  gfx.h  main.c  world.c  world.h
src/client/gfx/: base.c  config.c  config.h  data.h  image.c  model.c  shapes.c  window.c  window.h
src/shared/: chunk.c  chunk.h  chunk_queue.c  chunk_queue.h  config.h  entity.c  entity.h  noise.c  noise.h  player.c  player.h  raycast.c  raycast.h  structs.h  threading.c  threading.h  world.c  world.h
tools/: imgconv.py  imgconv_lib.py  meson.build
tools/dataconv/src/: arena.c  arena.h  main.c  meson.build  parser.c  parser.h  tree.c  tree.h
tools/imgconv/src/: conv.c  conv.h  img.c  img.h  main.c  meson.build
win32/openwatcom/: convert_img.bat  generate_config.bat  imgconv.tgt  imgconv.wpj  mibicraft.tgt  mibicraft.wpj  mibicraft_debug.tgt  mibicraft_debug.wpj
